# gluino

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  library.json
src/: CMakeLists.txt
src/Core/: ActionResult.cpp  ActionResult.hpp  ActionType.cpp  ActionType.hpp  Casting.hpp  Format.hpp  IEntity.cpp  IEntity.hpp  IIdleService.hpp  IList.cpp  IList.hpp  ILogger.hpp  ILoopedService.cpp  ILoopedService.hpp  IMessageQueue.cpp  IMessageQueue.hpp  IService.cpp  IService.hpp  Identity.hpp  List.hpp  Logger.cpp  Logger.hpp  Memory.hpp  Message.cpp  Message.hpp  MessageQueue.cpp  MessageQueue.hpp  Notification.cpp  Notification.hpp  ObjectResult.cpp  ObjectResult.hpp  QueueClient.hpp  QueueController.hpp  QueueResourceClient.hpp  QueueResourceClient.ipp  QueueResourceController.cpp  QueueResourceController.hpp  Request.cpp  Request.hpp  Response.cpp  (+12 more)
src/Json/: ISerializationContext.hpp  ISerializationContextFactory.cpp  ISerializationContextFactory.hpp  ISerializationService.hpp  ISerializer.cpp  ISerializer.hpp  ListSerializer.cpp  ListSerializer.hpp  NotificationSerializer.cpp  NotificationSerializer.hpp  ObjectResultSerializer.cpp  ObjectResultSerializer.hpp  RequestSerializer.cpp  RequestSerializer.hpp  ResponseSerializer.cpp  ResponseSerializer.hpp  SerializationService.hpp  Serializer.hpp  StatusResultSerializer.cpp  StatusResultSerializer.hpp
src/Messaging/: ActionType.cpp  ActionType.hpp  Event.cpp  Event.hpp  EventType.cpp  EventType.hpp  IHandler.hpp  IMessageQueue.hpp  Message.cpp  Message.hpp  MessageQueue.cpp  MessageQueue.hpp  Notification.cpp  Notification.hpp  QueueClient.cpp  QueueClient.hpp  QueueController.cpp  QueueController.hpp  QueueGenericClient.cpp  QueueGenericClient.hpp  QueueResourceClient.cpp  QueueResourceClient.hpp  QueueResourceController.cpp  QueueResourceController.hpp  Request.cpp  Request.hpp  RequestType.cpp  RequestType.hpp  ResourceEventHandler.hpp  ResourceRequestHandler.hpp  ResourceResponseHandler.hpp  Response.cpp  Response.hpp
src/Serialization/: EventSerializer.cpp  EventSerializer.hpp  IContextFactory.hpp  IDeserializationContext.hpp  ISerializationContext.cpp  ISerializationContext.hpp  ISerializationContextFactory.cpp  ISerializationContextFactory.hpp  ISerializationService.cpp  ISerializationService.hpp  ISerializer.cpp  ISerializer.hpp  ListSerializer.hpp  NotificationSerializer.cpp  NotificationSerializer.hpp  ObjectResultSerializer.cpp  ObjectResultSerializer.hpp  RequestSerializer.cpp  RequestSerializer.hpp  ResponseSerializer.cpp  ResponseSerializer.hpp  SerializationService.cpp  SerializationService.hpp  Serializer.hpp  StatusResultSerializer.cpp  StatusResultSerializer.hpp  StatusSerializer.cpp  StatusSerializer.hpp
test/: CMakeLists.txt  CMakeLists.txt.in  test.cpp
test/Core/: ActionTypeTest.cpp  CastingTest.cpp  FormatTest.cpp  ListTest.cpp  MemoryTest.cpp  ObjectResultTest.cpp  StatusResultTest.cpp  StatusTest.cpp  StringFormatTest.cpp
test/Messaging/: ActionTypeTest.cpp  EventTest.cpp  FakeMessageQueue.h  FakeMessageQueue.hpp  MessageQueueMock.hpp  MessageQueueTest.cpp  NotificatonTest.cpp  QueueClientTest.cpp  QueueGenericClientTest.cpp  QueueResourceClientTest.cpp  QueueResourceControllerTest.cpp  RequestTest.cpp  ResponseTest.cpp
test/Serialization/: EventSerializerTest.cpp  FakeDeserializationContext.hpp  FakeSerializationContext.hpp  FakeSerializer.hpp  ListSerializerTest.cpp  RequestSerializerTest.cpp  ResponseSerializerTest.cpp  SerializationServiceTest.cpp  StatusResultSerializerTest.cpp  StatusSerializerTest.cpp
test/Utils/: Testing.cpp  Testing.hpp
tests/: test.cpp
